--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "Proyecto DSW",
   "type": "module",
-  "main": "app.js",
+  "main": "dist/app.js",
   "scripts": {
     "build": "tsc -p ./tsconfig.json",
-    "start": "node ./dist/app.js"
+    "start": "node ./dist/app.js",
+    "prestart": "pnpm run build",
+    "postinstall": "pnpm run build"
   },
   "author": "",
   "license": "ISC",
