update for use railway

--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "main": "dist/app.js",
   "scripts": {
-    "build": "tsc -p ./tsconfig.json && cp -r src/views dist/ || true",
-    "start": "node ./dist/app.js",
-    "postinstall": "pnpm run build"
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/app.js"
   },
   "author": "",
   "license": "ISC",
