--- a/.railway/config.json
+++ b/.railway/config.json
@@ -1,10 +1,6 @@
 {
     "build": {
       "builder": "nixpacks",
-      "buildCommand": "pnpm install && pnpm run build",
-      "installCommand": "pnpm install --frozen-lockfile --shamefully-hoist",
-      "useYarn": false,
-      "usePnpm": true
-    },
-    "startCommand": "node ./dist/app.js"
+      "buildCommand": "pnpm install --frozen-lockfile && pnpm run build"
+    }
   }
