--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "main": "dist/app.js",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/app.js"
+    "build": "rm -rf dist && tsc -p tsconfig.json",
+    "start": "node dist/app.js",
+    "postinstall": "pnpm run build"
   },
   "author": "",
   "license": "ISC",
