--- a/.railway/config.json
+++ b/.railway/config.json
@@ -1,7 +1,7 @@
 {
-    "build": {
-      "builder": "nixpacks",
-      "cleanBeforeBuild": true,
-      "buildCommand": "pnpm install --frozen-lockfile --shamefully-hoist && pnpm run build"
-    }
+  "build": {
+    "builder": "nixpacks",
+    "buildCommand": "rm -rf node_modules && pnpm install --frozen-lockfile --shamefully-hoist && pnpm run build",
+    "installCommand": "pnpm install --frozen-lockfile --shamefully-hoist"
   }
+}
